--- a/index.html
+++ b/index.html
@@ -80,14 +80,10 @@ title: Home
 <div class="docs-section" id="publications">
   <h4><b>Publications</b></h4>
 
-  <p>Most recent publications on <a href="https://scholar.google.com/" target="_blank">Google Scholar</a>.</p>
+<!--   <p>Most recent publications on <a href="https://scholar.google.com/" target="_blank">Google Scholar</a>.</p> -->
 
   <ul class="tab-nav">
-    <!-- <li><div class="button active" data-ref="#papers-sel">Selected Papers</div></li> -->
     <li><div class="button active" data-ref="#papers-all">All</div></li>    
-<!--    <li><div class="button" data-ref="#papers-RL">Representation Learning</div></li>-->
-<!--    <li><div class="button" data-ref="#papers-NLP">NLP</div></li>-->
-<!--    <li><div class="button" data-ref="#papers-Bio">Comp Bio</div></li>-->
   </ul>
 
   <div class="tab-content">
@@ -373,6 +369,6 @@ title: Home
 <div class="docs-section" id="ack">
   <h4>Acknowledgement</h4>
   <p>
-    This website is based on <a href="https://github.com/msaveski/www_personal">Martin Saveski</a>
+    This website is based on the repository from <a href="https://github.com/msaveski/www_personal">Martin Saveski</a>
   </p>
 </div>
