--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@ title: Home
 
   <div class="tab-content">
 
-    <!-- <div class="tab-pane active" id="papers-sel">
+    <!-- <div class="tab-pane" id="papers-sel">
       {% assign papers = site.data.publications.papers | where: "selected", "y" %}
       {% for paper in papers %}
         <div class="paper">
@@ -127,7 +127,7 @@ title: Home
     </div> -->
 
     <!-- All PAPERS -->
-    <div class="tab-pane" id="papers-all">
+    <div class="tab-pane active" id="papers-all">
       {% assign papers = site.data.publications.papers %}
       {% for paper in papers %}
         <div class="paper">
