--- a/index.html
+++ b/index.html
@@ -103,15 +103,15 @@ title: Home
 
 <!-- ========== RESUME ========== -->
 <div class="docs-section" id="resume">
-  <h4>Vitæ</h4>
+  <h4>Experiences</h4>
 
-  <p>Full Resume in <a href={{ "/assets/cv/cv_web.pdf" | prepend: site.baseurl }} target="_blank">PDF</a>.</p>
+<!--   <p>Full Resume in <a href={{ "/assets/cv/cv_web.pdf" | prepend: site.baseurl }} target="_blank">PDF</a>.</p> -->
 
   <!-- The Timeline -->
   <ul class="timeline">
     {% for exp in site.data.experience.experiences %}
     <li>
-      {% if exp.category == "work" %}
+      {% if exp.category == "internship" %}
       <div class="direction-l">
       {% else %}
       <div class="direction-r">
