--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ title: Home
   <ul class="timeline">
     {% for exp in site.data.experience.experiences %}
     <li>
-      {% if exp.category == "internship" %}
+      {% if exp.category == "Intern" %}
       <div class="direction-l">
       {% else %}
       <div class="direction-r">
