--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ title: Home
 <div class="docs-section" id="bio">
   <h4><b>Bio</b></h4>
   <p>
-    <br> I received my BE degree in computer science and technology from the University of Science and Technology of China and my MS degree in software engineering from Shanghai Jiao Tong University, where he is currently working toward a Ph.D. degree of computer science and technology,
+    <br> I received my BE degree in computer science and technology from the University of Science and Technology of China and my MS degree in software engineering from Shanghai Jiao Tong University, where I'm currently working toward a Ph.D. degree of computer science and technology,
      under the supervision of Prof. <a href=https://basics.sjtu.edu.cn/~liguoqiang>Guoqiang Li</a>. My research interests include natural language processing, knowledge graphs, and AI verification.
   </p>
 </div>
