--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ title: Home
 
 <!-- ========== RESUME ========== -->
 <div class="docs-section" id="resume">
-  <h4>Experiences</h4>
+  <h4><b>Experiences</b></h4>
 
 <!--   <p>Full Resume in <a href={{ "/assets/cv/cv_web.pdf" | prepend: site.baseurl }} target="_blank">PDF</a>.</p> -->
 
